# WordOfGod

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  meson.build  org.robertomorrison.bible.json  org.robertomorrison.biblebolls.yml  org.robertomorrison.wordofgod.json
.flatpak-builder/cache/refs/heads/x86_64-bible.robertomorrison.org.json/: init
.flatpak-builder/cache/refs/heads/x86_64-org.robertomorrison.bible.json/: init
.flatpak-builder/cache/refs/heads/x86_64-org.robertomorrison.biblebolls.yml/: build-libjsoncpp  cleanup  init
.flatpak-builder/checksums/: x86_64-org.robertomorrison.bible.json  x86_64-org.robertomorrison.biblebolls.yml
data/: builder.ui  chapter_item.ui  color_selector.ui  gtkbible.gschema.xml  line_distance_selector.ui  meson.build  org.robertomorrison.bible.appdata.xml.in  org.robertomorrison.bible.desktop.in  org.robertomorrison.wordofgod.appdata.xml.in  org.robertomorrison.wordofgod.desktop.in  org.robertomorrison.wordofgod.gresource.xml  org.robertomorrison.wordofgod.gschema.xml  preferences_window.ui  scroll_button.ui  style.gresource.xml  text_page.ui  theme_selector.ui  theme_selector.ui.bak  window.ui
data/icons/: meson.build
data/styles/: black.css  color_selector.css  line_distance_selector.css  scroll_button.css  style.css  theme_selector.css  window.css  yellow.css
flatpak/.flatpak-builder/cache/: summary  summary.idx
flatpak/.flatpak-builder/cache/refs/heads/app/org.robertomorrison.biblebolls/x86_64/: master
flatpak/.flatpak-builder/cache/refs/heads/runtime/org.robertomorrison.biblebolls.Debug/x86_64/: master
flatpak/.flatpak-builder/cache/refs/heads/x86_64-org.robertomorrison.biblebolls.yml/: build-libjsoncpp  build-org.robertomorrison.biblebolls  cleanup  finish  init
flatpak/.flatpak-builder/cache/summaries/: 24cd134af9d1f0cc431e6e5c190b485bb72484e877a5d0bf186b3d589db35f39-374a9b00ee7135dd96180da81c2ca9b678d0dc23454cb1d0c401a9cc25e9eaad.delta  383145f16bad00927f061d79908e929e60fa67d80f0472cd40413daf3f980813-374a9b00ee7135dd96180da81c2ca9b678d0dc23454cb1d0c401a9cc25e9eaad.delta  4a4857835225311ccc5869ccd301df18b43cdd6e3860a682d65b4516297ee9ef-374a9b00ee7135dd96180da81c2ca9b678d0dc23454cb1d0c401a9cc25e9eaad.delta  7c83be266354c6d2821579699150c42d6df53f3c08aebda7c395d0e7c001e046-374a9b00ee7135dd96180da81c2ca9b678d0dc23454cb1d0c401a9cc25e9eaad.delta  91c02d3e524e65f8d08b6a6c4449a19bc8b3e5e924d8ca1b0735deec190155fd-374a9b00ee7135dd96180da81c2ca9b678d0dc23454cb1d0c401a9cc25e9eaad.delta
flatpak/.flatpak-builder/checksums/: x86_64-org.robertomorrison.biblebolls.yml
include/: Translation.hpp  app.h  bible_content.h  color_selector.h  line_distance_selector.h  preferences_window.h  scroll_button.h  static_functions.hpp  text_page.h  theme_selector.h  window.h
po/: POTFILES  de.po  meson.build
resources/: .gitignore  builder.ui  resources.c  style.gresource  style.xml
src/: app.c  bible-application.c  bible-application.h  bible-window.c  bible-window.h  bible-window.ui  bible.gresource.xml  bible_content.c  bible_content.c.bak  bible_content.c.bak2  color_selector.c  line_distance_selector.c  main.c  meson.build  org.robertomorrison.wordofgod.gresource.xml  preferences_window.c  scroll_button.c  text_page.c  theme_selector.c  window.c  wordofgod.gresource.xml
styles/: style-dark.css  style.css
